[Fix] text too small for mobile

--- a/src/assets/scss/agenda.scss
+++ b/src/assets/scss/agenda.scss
@@ -7,13 +7,7 @@
   @media screen and (max-width: $max-width-medium-0) {
     font-size: 12pt;
   }
-  @media screen and (max-width: $max-width-small-0) {
-    font-size: 10pt;
   }
-  @media screen and (max-width: $max-width-small-2) {
-    font-size: 8pt
-  }
-}
 @mixin RWDWidth {
   max-width: 80%;
   @media screen and (max-width: $max-width-medium-0) {
